--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-openai==0.26.5
-requests==2.28.2
-discord.py==2.1.1
-python-dotenv==0.21.1
-Flask==2.2.3
+discord.py==2.2.2
+python-dotenv==1.0.0
+asgiref==3.6.0
+openai==0.27.4
+revChatGPT==4.2.4
+GoogleBard==0.0.7
+EdgeGPT==0.1.25.1
